mobile firefox layout bug

--- a/codes/images/index.css
+++ b/codes/images/index.css
@@ -42,9 +42,23 @@ body{
     }
 }
 
-@keyframes slideInFromLeft {
+@-webkit-keyframes slideInFromLeft {
     0% {
-      transform: translateX(-100%);
+      /* transform: translateX(-100%); */
+      opacity: 0;
+      scale: 0.5;
+    }
+
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+      scale: 1;
+    }
+  }
+
+@-moz-keyframes slideInFromLeft {
+    0% {
+      /* transform: translateX(-100%); */
       opacity: 0;
       scale: 0.5;
     }
@@ -81,7 +95,8 @@ body{
     height: 245px;
     background: url('./bg-card-front.png');
     left: -5rem;
-    animation: 1s ease-out 0s 1 slideInFromLeft;
+    -moz-animation: 1s ease-out 0s 1 slideInFromLeft;
+    -webkit-animation: 1s ease-out 0s 1 slideInFromLeft;
 }
 
 .details-wrap{
@@ -136,7 +151,8 @@ body{
     font-weight: 500;
     color: white;
     position: relative;
-    animation: 1s ease-out 0s 1 slideInFromLeft;
+    -moz-animation: 1s ease-out 0s 1 slideInFromLeft;
+    -webkit-animation: 1s ease-out 0s 1 slideInFromLeft;
 }
 
 .cvc-number{
